tests/derive_errors/enum/empty.stderr
error: jtd-derive does not support empty enums
 --> tests/derive_errors/enum/empty.rs:2:6
  |
2 | enum Empty {}
  |      ^^^^^
